--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,10 +1,10 @@
 $hero: #F94851;
 $accent: #FFB76E;
-$hover: #F3902C;
+$hover: #FF9E3C;
 $bg: #F6EDE1;
 $bgAccent: #F5CFCA;
-$txtGrey: #707070;
-$txtBlack: #28292B;
+$txtGrey: #4b4b4b;
+$txtBlack: #141517;
 
 @mixin serifHeader {
   font-family: "Bree Serif", sans-serif;
